<resources>
    <string name="app_name">Keycard Connect</string>
    <string name="pin_prompt">Insert your PIN</string>
    <string name="pin_attempts">%1$d retries left</string>
    <string name="pairing_password_prompt">Insert your pairing password</string>
    <string name="init_warning">Please save the credentials below as they won\'t be shown anymore. They can all be changed later, but you must at least remember the PIN</string>
    <string name="pin_label">PIN</string>
    <string name="puk_label">PUK</string>
    <string name="pairing_label">Pairing password</string>
    <string name="change_pin_prompt">Insert new PIN</string>
    <string name="change_pin">Change PIN</string>
    <string name="puk_prompt">Insert your PUK</string>
    <string name="nfc_prompt">Tap your card to the back of your phone</string>
    <string name="connect_wallet">Connect to WalletConnect</string>
    <string name="sign_button">Sign</string>
    <string name="reject_button">Reject</string>
    <string name="sign_text_label">Sign a message</string>
    <string name="sign_tx_label">Sign transaction</string>
    <string name="sign_tx_to_label">To</string>
    <string name="load_key_generate_oncard">Generate on card</string>
    <string name="load_generate_on_card_label">Generate keys on card without BIP39 mnemonic. Maximum security, but no backup possible.</string>
    <string name="load_import_mnemonic">Import Mnemonic</string>
    <string name="load_import_mnemonic_label">Import BIP39 Mnemonic</string>
    <string name="load_generate_mnemonic">Generate BIP39 Mnemonic</string>
    <string name="load_generate_mnemonic_label">Generate and load BIP39 mnemonic. You will be shown the mnemonic after it is loaded</string>
    <string name="mnemonic_ok_button">I have wrote these words down</string>
    <string name="mnemonic_label">Please write these words down. They won\'t be presented again and there is no way to recover them.</string>
    <string name="change_puk">Change PUK</string>
    <string name="change_pairing_password">Change pairing password</string>
    <string name="unpair">Unpair</string>
    <string name="unpair_others">Unpair Others</string>
    <string name="change_key">Change Key</string>
    <string name="remove_key">Remove key</string>
    <string name="change_puk_prompt">Insert new PUK</string>
    <string name="change_pairing_password_prompt">Insert new pairing password</string>
    <string name="network">Network</string>
    <string name="wallet_path_label">Wallet Path</string>
    <string name="wallet_path_hint">m/44\'/...</string>
    <string name="settings">Settings</string>
    <string name="reinstall">Install applet</string>
    <string name="reinstall_applet_prompt">Reinstall applet</string>
    <string name="reinstall_warning">WARNING: Reinstalling the applet completely destroys the currently loaded keys and resets all credentials. Make sure you have your seed phrase somewhere to restore from. Additionally, JCOP3 cards can be destroyed if the connection is lost during this process. Hold the card tightly to the phone!</string>
    <string name="reinstall_wallet_checkbox">Install Wallet applet</string>
    <string name="reinstall_cash_checkbox">Install Cash applet</string>
    <string name="reinstall_ndef_checkbox">Install NDEF applet</string>
    <string name="reinstall_button">Select cap file and install</string>
    <string name="btn_change">Change</string>
    <string name="disconnect_wallet">Disconnect</string>
    <string name="update_connection">Change network and address</string>
    <string name="pin_image">Pin Image</string>
    <string name="puk_image">Puk Image</string>
    <string name="pairing_image">Pairing Image</string>
    <string name="pass_image">Password</string>
    <string name="keycard_image">Keycard</string>
    <string name="wallet_not_connected">Not connected</string>
    <string name="or">or</string>
</resources>
