<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/walletConnectButton"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:onClick="connectWallet"
        android:text="@string/connect_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changePairingPasswordButton"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="changePairingPassword"
        android:text="@string/change_pairing_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePUKButton" />

    <Button
        android:id="@+id/changeKeyButton"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="changeKey"
        android:text="@string/change_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unpairOthers" />

    <Button
        android:id="@+id/reinstall"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="reinstall"
        android:text="@string/reinstall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeKey" />

    <Button
        android:id="@+id/unpairButton"
        android:layout_width="138dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:onClick="unpair"
        android:text="@string/unpair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePairingPasswordButton" />

    <Button
        android:id="@+id/removeKey"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="removeKey"
        android:text="@string/remove_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeKeyButton" />

    <Button
        android:id="@+id/unpairOthers"
        android:layout_width="163dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:onClick="unpairOthers"
        android:text="@string/unpair_others"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePairingPasswordButton" />

    <Button
        android:id="@+id/changePUKButton"
        android:layout_width="149dp"
        android:layout_height="46dp"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="60dp"
        android:onClick="changePUK"
        android:text="@string/change_puk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changePINButton"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="296dp"
        android:onClick="changePIN"
        android:text="@string/change_pin"
        app:layout_constraintEnd_toStartOf="@+id/changePUKButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/networkSpinner"
        android:layout_width="407dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/walletAddress"
        android:layout_width="375dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/networkSpinner" />

    <EditText
        android:id="@+id/walletPathText"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/networkSpinner" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:onClick="updateConnection"
        android:text="@string/update_connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/networkSpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>